add description and license
Signed-off-by: Balazs Horvath <acsipont@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "imx"
 version = "0.1.0"
 edition = "2024"
+description = "A Rust utility library for efficient image processing and manipulation, supporting batch operations, transparency handling, and letterbox removal"
+license = "MIT"
 
 [dependencies]
 image = "0.25.5"
