--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "imx"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
-description = "A Rust utility library for efficient image processing and manipulation, supporting batch operations, transparency handling, and letterbox removal"
+description = "A library for image processing and manipulation"
 license = "MIT"
 
 [dependencies]
-image = "0.25.5"
 anyhow = { version = "1.0.95", features = ["backtrace"] }
-tokio = { version = "1.43.0", features = ["full"] }
+image = { version = "0.25.5", features = ["png"] }
 log = "0.4.25"
+tokio = { version = "1.43.0", features = ["full"] }
+jxl-oxide = "0.11.2"
+
+[dev-dependencies]
+tempfile = "3.17.1"
