--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imx"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2024"
 description = "A library for image processing and manipulation"
 license = "MIT"
@@ -16,6 +16,8 @@ image = { version = "0.25.5", features = ["png"] }
 log = "0.4.26"
 tokio = { version = "1.43.0", features = ["full"] }
 jxl-oxide = "0.11.2"
+ab_glyph = "0.2.29"
+rgb = "0.8.50"
 
 [dev-dependencies]
 tempfile = "3.17.1"
