--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { version = "1.43.0", features = ["full"] }
 jxl-oxide = "0.11.2"
 ab_glyph = "0.2.29"
 rgb = "0.8.50"
+cast = "0.3.0"
 
 [dev-dependencies]
 tempfile = "3.17.1"
