--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imx"
-version = "0.1.17"
+version = "0.1.18"
 edition = "2024"
 description = "A library for image processing and manipulation"
 license = "MIT"
@@ -15,7 +15,7 @@ anyhow = { version = "1.0.96", features = ["backtrace"] }
 image = { version = "0.25.5", features = ["png"] }
 log = "0.4.26"
 tokio = { version = "1.43.0", features = ["full"] }
-jxl-oxide = "0.11.2"
+jxl-oxide = { version = "0.11.2", features = ["image"] }
 ab_glyph = "0.2.29"
 rgb = "0.8.50"
 
