--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ image = { version = "0.25.5", features = ["png"] }
 log = "0.4.26"
 tokio = { version = "1.43.0", features = ["full"] }
 jxl-oxide = { version = "0.11.2", features = ["image"] }
-ab_glyph = "0.2.29"
+fontdue = "0.9.3"
 rgb = "0.8.50"
 
 [dev-dependencies]
